# SoloCoder

./: .gitignore  CLAUDE.md  COORDINATE_FIX_SUMMARY.md  QUICKSTART.md  README.md  README.react-ui.md  SOLOCODER_VS_GOOGLE_ADK.md  TOKEN_PROGRESS_BAR_CHANGES.md  cli_coder.py  opencode.json  pyproject.toml  server.py  test_chrome_click.py  test_complete_workflow.py  test_multimodal.py  test_multimodal_simple.py  test_vllm_direct.py  test_vllm_multimodal.py
.github/workflows/: ci.yml
.streamlit/: config.toml
backend/: .gitignore  config.py  main.py  pyproject.toml  requirements.txt
backend/api/: schemas.py
backend/api/routes/: __init__.py  chat.py  models.py  session.py  ws.py
backend/services/: __init__.py  agent_service.py  streaming.py
backend/src/api/: schemas.py
backend/src/services/: __init__.py  agent_service.py  streaming.py
backend/src/tests/: test_api.py
backend/tests/: test_agent_service.py  test_streaming.py
dev_docs/: architecture.md
docs/: computer-use-guide.md  computer-use-macos.md  computer-use-vision.md  computer_use_coordinates.md
docs/superpowers/plans/: 2026-03-24-chader-web-ui.md  2026-03-24-openagent-core-refactor.md  (+3 more)
examples/: computer_use_demo.py  example.py  example_tools.py  example_with_tools.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  AppContent.tsx  index.css
openagent/: __init__.py  coder.py
openagent/apps/: __init__.py
openagent/core/: agent.py  config.py  display.py  logging.py  retry.py  session.py  skill_manager.py  sub_agent_manager.py  sub_agent_ui.py  tool.py  types.py  utils.py
openagent/infrastructure/: __init__.py  bash_manager.py  mcp.py
openagent/model/: __init__.py
openagent/prompts/: __init__.py  solocoder.md
openagent/provider/: __init__.py  base.py  google.py  ollama.py  openai.py
openagent/providers/: __init__.py  events.py
openagent/runtime/: __init__.py  agent.py  context.py  events.py  tool_executor.py
openagent/tools/: __init__.py  builtin.py  computer_use.py
tests/: test_agent.py  test_builtin_tools.py  test_example.py  test_google_provider.py  test_ollama_provider.py  test_openai_provider.py  test_schemas.py  test_server_agent.py  test_server_core.py  test_server_ui.py  test_session.py  test_tool.py  test_types.py
tests/apps/: test_solocoder_app.py
tests/infrastructure/: test_imports.py
tests/providers/: test_google_provider_stream.py  test_provider_base_stream.py  test_provider_stream_contract.py
tests/runtime/: test_agent_runtime.py  test_events.py  test_tool_executor.py
(+19 files in other folders)
