[project]
name = "openagent"
version = "0.1.0"
description = "A lightweight, async-first agent framework with pluggable LLM providers and comprehensive built-in tools"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Anthropic", email = "support@anthropic.com" },
]
keywords = [
    "ai",
    "agent",
    "llm",
    "async",
    "mcp",
    "tool-execution",
    "chatbot",
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp>=1.0.0",
    "openai>=1.0",
    "anthropic>=0.40",
]

[project.optional-dependencies]
google = ["google-genai>=1.0"]
ollama = ["ollama>=0.4"]
web = ["duckduckgo-search>=6.0", "httpx>=0.27"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
all = [
    "google-genai>=1.0",
    "ollama>=0.4",
    "duckduckgo-search>=6.0",
    "httpx>=0.27",
]

[project.scripts]
openagent = "cli_coder:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/anthropics/openagent"
Repository = "https://github.com/anthropics/openagent"
Documentation = "https://github.com/anthropics/openagent#readme"
Issues = "https://github.com/anthropics/openagent/issues"
Changelog = "https://github.com/anthropics/openagent/releases"

