[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solocoder-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "websockets>=13.0",
    "pydantic>=2.0",
    "openagent @ file:///Users/taozeng/Projects/SoloCoder",
]

[tool.hatch.build.targets.wheel]
packages = ["services", "tests"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
